<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <!--BGH logo-->
    <ImageView
        android:layout_width="336dp"
        android:layout_height="168dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/bgh_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--Question #1 Code Starts here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg"
                android:padding="8dp"
                android:text="@string/question1"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/ldl_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ldl_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/trueButton" />

                <RadioButton
                    android:id="@+id/ldl_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/falseButton" />

            </RadioGroup>

            <!--Question #2 Code Starts Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg"
                android:padding="8dp"
                android:text="@string/question2"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/hdl_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/hdl_true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/trueButton" />

                <RadioButton
                    android:id="@+id/hdl_false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/falseButton" />

            </RadioGroup>

            <!--Question #3 Code Start Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg"
                android:padding="8dp"
                android:text="@string/question3"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/carrie_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques3answerA" />

                    <CheckBox
                        android:id="@+id/star_wars_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques3answerB" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/hills_have_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques3answerC" />

                    <CheckBox
                        android:id="@+id/saturday_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques3answerD" />
                </LinearLayout>
            </LinearLayout>

            <!--Question #4 Code Starts Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg"
                android:padding="8dp"
                android:text="@string/question4"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/problem_child_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques4answerA" />

                    <CheckBox
                        android:id="@+id/last_starfighter_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques4answerB" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/space_camp_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques4answerC" />

                    <CheckBox
                        android:id="@+id/dennis_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ques4answerD" />
                </LinearLayout>
            </LinearLayout>

            <!--Question #5 Code Starts Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg"
                android:padding="8dp"
                android:text="@string/question5"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ques_5_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/ques5hint" />

            <!--Question #6 Code Starts Here-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/bg"
                android:padding="8dp"
                android:text="@string/question6"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ques_6_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/ques6hint" />

            <!--Submit Quiz Button-->
            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:onClick="submitQuiz"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>